// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`block calculation can calculate some blocks 1 1`] = `
BlockSet {
  "blocks": Array [
    ContentBlock {
      "assemblyName": undefined,
      "end": 800,
      "isLeftEndOfDisplayedRegion": true,
      "isRightEndOfDisplayedRegion": false,
      "key": "ctgA:1-800",
      "offsetPx": 0,
      "parentRegion": Object {
        "end": 10000,
        "refName": "ctgA",
        "start": 0,
      },
      "refName": "ctgA",
      "reversed": undefined,
      "start": 0,
      "widthPx": 800,
    },
    ContentBlock {
      "assemblyName": undefined,
      "end": 1600,
      "isLeftEndOfDisplayedRegion": false,
      "isRightEndOfDisplayedRegion": false,
      "key": "ctgA:801-1600",
      "offsetPx": 800,
      "parentRegion": Object {
        "end": 10000,
        "refName": "ctgA",
        "start": 0,
      },
      "refName": "ctgA",
      "reversed": undefined,
      "start": 800,
      "widthPx": 800,
    },
  ],
}
`;

exports[`block calculation can calculate some blocks 2 1`] = `
BlockSet {
  "blocks": Array [
    ContentBlock {
      "assemblyName": undefined,
      "end": 100,
      "isLeftEndOfDisplayedRegion": true,
      "isRightEndOfDisplayedRegion": true,
      "key": "ctgA:1-100",
      "offsetPx": 0,
      "parentRegion": Object {
        "end": 100,
        "refName": "ctgA",
        "start": 0,
      },
      "refName": "ctgA",
      "reversed": undefined,
      "start": 0,
      "widthPx": 100,
    },
    ContentBlock {
      "assemblyName": undefined,
      "end": 200,
      "isLeftEndOfDisplayedRegion": true,
      "isRightEndOfDisplayedRegion": true,
      "key": "ctgB:101-200",
      "offsetPx": 102,
      "parentRegion": Object {
        "end": 200,
        "refName": "ctgB",
        "start": 100,
      },
      "refName": "ctgB",
      "reversed": undefined,
      "start": 100,
      "widthPx": 100,
    },
  ],
}
`;

exports[`block calculation can calculate some blocks 5 1`] = `
BlockSet {
  "blocks": Array [
    ContentBlock {
      "assemblyName": undefined,
      "end": 5600,
      "isLeftEndOfDisplayedRegion": false,
      "isRightEndOfDisplayedRegion": false,
      "key": "ctgA:4801-5600",
      "offsetPx": 4800,
      "parentRegion": Object {
        "end": 10000,
        "refName": "ctgA",
        "start": 0,
      },
      "refName": "ctgA",
      "reversed": undefined,
      "start": 4800,
      "widthPx": 800,
    },
    ContentBlock {
      "assemblyName": undefined,
      "end": 6400,
      "isLeftEndOfDisplayedRegion": false,
      "isRightEndOfDisplayedRegion": false,
      "key": "ctgA:5601-6400",
      "offsetPx": 5600,
      "parentRegion": Object {
        "end": 10000,
        "refName": "ctgA",
        "start": 0,
      },
      "refName": "ctgA",
      "reversed": undefined,
      "start": 5600,
      "widthPx": 800,
    },
  ],
}
`;

exports[`block calculation can calculate some blocks 6 1`] = `
BlockSet {
  "blocks": Array [
    ContentBlock {
      "assemblyName": undefined,
      "end": 200,
      "isLeftEndOfDisplayedRegion": true,
      "isRightEndOfDisplayedRegion": true,
      "key": "ctgA:1-200",
      "offsetPx": 0,
      "parentRegion": Object {
        "end": 200,
        "refName": "ctgA",
        "start": 0,
      },
      "refName": "ctgA",
      "reversed": undefined,
      "start": 0,
      "widthPx": 200,
    },
    ContentBlock {
      "assemblyName": undefined,
      "end": 800,
      "isLeftEndOfDisplayedRegion": true,
      "isRightEndOfDisplayedRegion": false,
      "key": "ctgB:1-800",
      "offsetPx": 202,
      "parentRegion": Object {
        "end": 1000,
        "refName": "ctgB",
        "start": 0,
      },
      "refName": "ctgB",
      "reversed": undefined,
      "start": 0,
      "widthPx": 800,
    },
  ],
}
`;

exports[`block calculation can calculate some blocks 7 1`] = `
BlockSet {
  "blocks": Array [
    ContentBlock {
      "assemblyName": undefined,
      "end": 800,
      "isLeftEndOfDisplayedRegion": true,
      "isRightEndOfDisplayedRegion": false,
      "key": "ctgB:1-800",
      "offsetPx": 202,
      "parentRegion": Object {
        "end": 1000,
        "refName": "ctgB",
        "start": 0,
      },
      "refName": "ctgB",
      "reversed": undefined,
      "start": 0,
      "widthPx": 800,
    },
    ContentBlock {
      "assemblyName": undefined,
      "end": 1000,
      "isLeftEndOfDisplayedRegion": false,
      "isRightEndOfDisplayedRegion": true,
      "key": "ctgB:801-1000",
      "offsetPx": 1002,
      "parentRegion": Object {
        "end": 1000,
        "refName": "ctgB",
        "start": 0,
      },
      "refName": "ctgB",
      "reversed": undefined,
      "start": 800,
      "widthPx": 200,
    },
  ],
}
`;

exports[`block calculation can calculate some blocks 8 1`] = `
BlockSet {
  "blocks": Array [
    ContentBlock {
      "assemblyName": undefined,
      "end": 1600,
      "isLeftEndOfDisplayedRegion": false,
      "isRightEndOfDisplayedRegion": false,
      "key": "ctgB:801-1600",
      "offsetPx": 1002,
      "parentRegion": Object {
        "end": 10000000,
        "refName": "ctgB",
        "start": 0,
      },
      "refName": "ctgB",
      "reversed": undefined,
      "start": 800,
      "widthPx": 800,
    },
    ContentBlock {
      "assemblyName": undefined,
      "end": 2400,
      "isLeftEndOfDisplayedRegion": false,
      "isRightEndOfDisplayedRegion": false,
      "key": "ctgB:1601-2400",
      "offsetPx": 1802,
      "parentRegion": Object {
        "end": 10000000,
        "refName": "ctgB",
        "start": 0,
      },
      "refName": "ctgB",
      "reversed": undefined,
      "start": 1600,
      "widthPx": 800,
    },
  ],
}
`;

exports[`block calculation can calculate some blocks 9 1`] = `
BlockSet {
  "blocks": Array [
    ContentBlock {
      "assemblyName": undefined,
      "end": 3200,
      "isLeftEndOfDisplayedRegion": false,
      "isRightEndOfDisplayedRegion": false,
      "key": "ctgA:1601-3200",
      "offsetPx": 800,
      "parentRegion": Object {
        "end": 50000,
        "refName": "ctgA",
        "start": 0,
      },
      "refName": "ctgA",
      "reversed": undefined,
      "start": 1600,
      "widthPx": 800,
    },
    ContentBlock {
      "assemblyName": undefined,
      "end": 4800,
      "isLeftEndOfDisplayedRegion": false,
      "isRightEndOfDisplayedRegion": false,
      "key": "ctgA:3201-4800",
      "offsetPx": 1600,
      "parentRegion": Object {
        "end": 50000,
        "refName": "ctgA",
        "start": 0,
      },
      "refName": "ctgA",
      "reversed": undefined,
      "start": 3200,
      "widthPx": 800,
    },
  ],
}
`;

exports[`block calculation can calculate some blocks 10 1`] = `
Array [
  ContentBlock {
    "assemblyName": undefined,
    "end": 140,
    "isLeftEndOfDisplayedRegion": true,
    "isRightEndOfDisplayedRegion": false,
    "key": "ctgA:101-140",
    "offsetPx": 0,
    "parentRegion": Object {
      "end": 200,
      "refName": "ctgA",
      "start": 100,
    },
    "refName": "ctgA",
    "reversed": undefined,
    "start": 100,
    "widthPx": 800,
  },
  ContentBlock {
    "assemblyName": undefined,
    "end": 180,
    "isLeftEndOfDisplayedRegion": false,
    "isRightEndOfDisplayedRegion": false,
    "key": "ctgA:141-180",
    "offsetPx": 800,
    "parentRegion": Object {
      "end": 200,
      "refName": "ctgA",
      "start": 100,
    },
    "refName": "ctgA",
    "reversed": undefined,
    "start": 140,
    "widthPx": 800,
  },
]
`;

exports[`reverse block calculation 1 1`] = `
BlockSet {
  "blocks": Array [
    ContentBlock {
      "assemblyName": undefined,
      "end": 10000,
      "isLeftEndOfDisplayedRegion": true,
      "isRightEndOfDisplayedRegion": false,
      "key": "ctgA:9201-10000-reversed",
      "offsetPx": 0,
      "parentRegion": Object {
        "end": 10000,
        "refName": "ctgA",
        "reversed": true,
        "start": 0,
      },
      "refName": "ctgA",
      "reversed": true,
      "start": 9200,
      "widthPx": 800,
    },
    ContentBlock {
      "assemblyName": undefined,
      "end": 9200,
      "isLeftEndOfDisplayedRegion": false,
      "isRightEndOfDisplayedRegion": false,
      "key": "ctgA:8401-9200-reversed",
      "offsetPx": 800,
      "parentRegion": Object {
        "end": 10000,
        "refName": "ctgA",
        "reversed": true,
        "start": 0,
      },
      "refName": "ctgA",
      "reversed": true,
      "start": 8400,
      "widthPx": 800,
    },
  ],
}
`;

exports[`reversed displayed regions with elided region 1`] = `
BlockSet {
  "blocks": Array [
    ElidedBlock {
      "assemblyName": undefined,
      "elidedBlockCount": 1,
      "end": 1,
      "isLeftEndOfDisplayedRegion": true,
      "isRightEndOfDisplayedRegion": true,
      "key": "ctgA:1-1-reversed",
      "offsetPx": 0,
      "parentRegion": Object {
        "end": 1,
        "refName": "ctgA",
        "reversed": true,
        "start": 0,
      },
      "refName": "ctgA",
      "reversed": true,
      "start": 0,
      "widthPx": 1,
    },
    ContentBlock {
      "assemblyName": undefined,
      "end": 10000,
      "isLeftEndOfDisplayedRegion": true,
      "isRightEndOfDisplayedRegion": false,
      "key": "ctgA:9201-10000-reversed",
      "offsetPx": 3,
      "parentRegion": Object {
        "end": 10000,
        "refName": "ctgA",
        "reversed": true,
        "start": 0,
      },
      "refName": "ctgA",
      "reversed": true,
      "start": 9200,
      "widthPx": 800,
    },
    ContentBlock {
      "assemblyName": undefined,
      "end": 9200,
      "isLeftEndOfDisplayedRegion": false,
      "isRightEndOfDisplayedRegion": false,
      "key": "ctgA:8401-9200-reversed",
      "offsetPx": 803,
      "parentRegion": Object {
        "end": 10000,
        "refName": "ctgA",
        "reversed": true,
        "start": 0,
      },
      "refName": "ctgA",
      "reversed": true,
      "start": 8400,
      "widthPx": 800,
    },
  ],
}
`;

exports[`reversed displayed regions without elided region 1`] = `
BlockSet {
  "blocks": Array [
    ContentBlock {
      "assemblyName": undefined,
      "end": 200,
      "isLeftEndOfDisplayedRegion": true,
      "isRightEndOfDisplayedRegion": true,
      "key": "ctgA:101-200-reversed",
      "offsetPx": 0,
      "parentRegion": Object {
        "end": 200,
        "refName": "ctgA",
        "reversed": true,
        "start": 100,
      },
      "refName": "ctgA",
      "reversed": true,
      "start": 100,
      "widthPx": 100,
    },
    ContentBlock {
      "assemblyName": undefined,
      "end": 600,
      "isLeftEndOfDisplayedRegion": true,
      "isRightEndOfDisplayedRegion": true,
      "key": "ctgA:501-600-reversed",
      "offsetPx": 102,
      "parentRegion": Object {
        "end": 600,
        "refName": "ctgA",
        "reversed": true,
        "start": 500,
      },
      "refName": "ctgA",
      "reversed": true,
      "start": 500,
      "widthPx": 100,
    },
  ],
}
`;
